--- a/Clase 4/ejercicio1.html
+++ b/Clase 4/ejercicio1.html
@@ -21,6 +21,8 @@
       console.log(style.display);
       console.log(style.display);
       console.log(style.display);
+      console.log(style.display);
+      console.log(style.display);
     </script>
   </body>
 </html>
