--- a/Clase 4/ejercicio1.html
+++ b/Clase 4/ejercicio1.html
@@ -22,6 +22,7 @@
       console.log(style.display);
       console.log(style.display);
       console.log(style.display);
+      const variable1 = 150;
       console.log(style.display);
     </script>
   </body>
