dale el conflicto

--- a/Clase 4/ejercicio1.html
+++ b/Clase 4/ejercicio1.html
@@ -20,6 +20,7 @@
       const style = currentStyle("contenedor");
       console.log(style.display);
       console.log(style.display);
+      const variable2 = 145;
       console.log(style.display);
       console.log(style.display);
       const variable1 = 150;
