actualizo mi repo local

--- a/Clase 4/ejercicio1.html
+++ b/Clase 4/ejercicio1.html
@@ -24,6 +24,7 @@
       console.log(style.display);
       console.log(style.display);
       console.log(style.display);
+      const variable3 = 1250;
     </script>
   </body>
 </html>
